[gd_scene load_steps=7 format=2]

[ext_resource path="res://Resources/MidnightJunkYard.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://Resources/SFX/Game Opening.wav" type="AudioStream" id=3]
[ext_resource path="res://Resources/SFX/UI Accept.wav" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0588235, 0.0156863, 0.0627451, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -153.5
margin_top = 30.0
margin_right = 153.5
margin_bottom = 143.0
custom_fonts/font = SubResource( 1 )
text = "SOULSPLIT"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.0
margin_top = -20.0
margin_right = 90.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 2 )
text = "PLAY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tutorial" type="Button" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.0
margin_top = 40.0
margin_right = 90.0
margin_bottom = 79.0
custom_fonts/font = SubResource( 2 )
text = "TUTORIAL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.0
margin_top = 220.0
margin_right = 90.0
margin_bottom = 259.0
custom_fonts/font = SubResource( 2 )
text = "QUIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI_Accept" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="GameOpening" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -15.0
pitch_scale = 1.5

[connection signal="pressed" from="ColorRect/Play" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="ColorRect/Tutorial" to="." method="_on_Tutorial_pressed"]
[connection signal="pressed" from="ColorRect/Quit" to="." method="_on_Quit_pressed"]
